<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/action_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/actionBar"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:src="@drawable/backicon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingRight="20dp"
            android:text="@string/registration_form"
            android:textColor="@color/text"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:weightSum="5">

            <EditText
                android:id="@+id/first_name_register_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:hint="@string/first_name" />

            <EditText
                android:id="@+id/last_name_register_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:hint="@string/last_name" />

            <EditText
                android:id="@+id/email_id_register_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_register_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirm_password_register_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/register_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/button"
                android:clickable="true"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/register"
                android:textColor="@color/text"
                android:textSize="20sp" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>