<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    android:orientation="vertical">


    <EditText
        android:id="@+id/welcomePage_email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/welcomePage_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/welcomePage_button_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="right">


            <TextView
                android:id="@+id/welcomePage_signIn_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#419fc7"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="left">


            <TextView
                android:id="@+id/welcomePage_cancel_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#419fc7"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="#000000" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/welcomePage_register_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/not_a_user"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="center|bottom">

        <TextView
            android:id="@+id/welcomePage_skip_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/skip"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
