<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/action_bar_layout_landing_page"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/actionBar"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:src="@drawable/backicon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:inputType="textEmailAddress"
            android:gravity="center|center_vertical"
            android:hint="@string/user_email"

            android:padding="20dp"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:inputType="textWebPassword"
            android:gravity="center|center_vertical"
            android:hint="@string/user_password"
            android:padding="20dp"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/user_reenter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:inputType="textWebPassword"
            android:gravity="center|center_vertical"
            android:hint="@string/user_confirm_password"
            android:padding="20dp"
            android:textAppearance="?android:textAppearanceMedium" />
        <TextView
            android:id="@+id/user_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:clickable="true"
            android:background="@color/button"
            android:text="@string/change_pass"
            android:textAppearance="?android:textAppearanceMedium"
            />
    </LinearLayout>

</LinearLayout>